# news_letter_api

./: .tmuxinator.yml  Cargo.toml  Dockerfile.production  README.md  configuration.yaml
.github/workflows/: ci.yml
configuration/: base.yaml
docs/: actix_web.md  database.md  technical_write_up.md  testing.md  tokio.md  tracing.md
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: README.md  health_check.rs  subscribe.rs  test_utils.rs
