[package]
name = "email_newsletter_api"
version = "0.1.0"
edition = "2021"

[profile.bench]
debug = true

[lib]
path = "src/lib.rs"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "email_newsletter_api"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
config = "0.13"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.10"
h2 = "0.3.26"
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
validator = { version = "0.18.1", features = ["derive"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
fake = "~2.3"
claims = "0.7.1"
once_cell = "1.19.0"
reqwest = "0.12.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
